# aloeplayer_ohos

./: README.md  fenxits.py  log.og  pubspec.yaml
Assets/: .gitignore  privacy_policy.html  thanksfor.txt
castscreen-1.0.2/lib/src/core/: core.dart  device.dart  service.dart
chewie-1.8.5/: pubspec.yaml
chewie-1.8.5/lib/src/: chewie_player.dart  ffmpegview.dart  player_with_controls.dart
chewie-1.8.5/lib/src/material/: material_controls.dart
dart_libass-main/: pubspec.yaml
dart_libass-main/lib/: dart_libass.dart
dart_libass-main/test/: 1.ass  2.ass
fluttertpc_screen/: OAT.xml  README.OpenSource  README_OpenHarmony.md  pubspec.yaml
fluttertpc_screen/lib/: screen.dart
fluttertpc_screen/ohos/: Index.ets  oh-package-lock.json5  oh-package.json5
fluttertpc_screen/ohos/src/main/: module.json5
fluttertpc_screen/ohos/src/main/ets/flutter/plugins/screen/screen/: FlutterScreenPlugin.ets
image_picker/image_picker_ohos/ohos/src/main/ets/image_picker/: ImagePickerDelegate.ets
lib/: ass.dart  audio_player_service.dart  audiolibrary.dart  favorite.dart  ffmpegview.dart  history_page.dart  history_service.dart  lyrics_page.dart  main.dart  mini_player.dart  mpvplayer.dart  musicplayer.dart  player.dart  privacy_policy.dart  settings.dart  smblibrary.dart  theme_provider.dart  videolibrary.dart  volumeview.dart  webdav.dart
lib/chewie-1.8.5/: README.md
lib/chewie-1.8.5/example/lib/: main.dart
lib/chewie-1.8.5/example/lib/app/: app.dart
lib/chewie-1.8.5/example/test/: widget_test.dart
lib/chewie-1.8.5/lib/: chewie.dart
lib/chewie-1.8.5/lib/src/: center_play_button.dart  chewie_player.dart  ffmpegview.dart  hdrview.dart  player_with_controls.dart  progress_bar.dart
lib/chewie-1.8.5/lib/src/cupertino/: cupertino_controls.dart  cupertino_progress_bar.dart
lib/chewie-1.8.5/lib/src/cupertino/widgets/: cupertino_options_dialog.dart
lib/chewie-1.8.5/lib/src/helpers/: adaptive_controls.dart
lib/chewie-1.8.5/lib/src/material/: material_controls.dart  material_desktop_controls.dart  material_progress_bar.dart
lib/chewie-1.8.5/lib/src/material/widgets/: options_dialog.dart  playback_speed_dialog.dart
lib/chewie-1.8.5/lib/src/models/: subtitle_model.dart
lib/chewie-1.8.5/test/: uninitialized_controls_state_test.dart
lib/models/: cast_device.dart
lib/screens/: cast_screen_page.dart  castview.dart
lib/services/: media_cast_service.dart
lib/widgets/: device_list_item.dart  media_controls.dart
ohos/: .gitignore  build-profile.json5  build-profile.json5.template  oh-package.json5
ohos/AppScope/: app.json5
ohos/backuplibs/: rename.py
ohos/entry/: .gitignore  build-profile.json5  oh-package.json5
ohos/entry/src/main/: module.json5
ohos/entry/src/main/cpp/: CMakeLists.txt  asstest.c  asstest.h  cmdutils.c  cmdutils.h  exception.c  exception.h  ffmpeg.c  ffmpeg.h  main.cpp  napi_init.cpp  napi_init.h  napi_initcopy.cpp  napi_initz.cpp  napi_new.cpp.bak  napi_new.h  utils.hpp
ohos/entry/src/main/cpp/FFmpeg/arm64-v8a/include/: config.h
ohos/entry/src/main/cpp/FFmpeg/arm64-v8a/include/libavutil/: ffversion.h
ohos/entry/src/main/cpp/cppunit/arm64-v8a/include/cppunit/: config-auto.h
ohos/entry/src/main/cpp/types/libentry/: Index.d.ts
ohos/entry/src/main/ets/common/: PlayStatus.ets
ohos/entry/src/main/ets/entryability/: CastFactory.ets  CastPlugin.ets  CastUtils.ets  CastView.ets  DownloadPlugin.ets  EntryAbility.ets  FfmpegFactory.ets  FfmpegPlugin.ets  FfmpegUtils.ets  FfmpegUtils.ets.bak  FfmpegView.ets  HdrFactory.ets  HdrPlugin.ets  HdrView.ets  RouterParam.ets  VolumeFactory.ets  VolumePlugin.ets  VolumeView.ets
ohos/entry/src/main/ets/hdrability/: HDRAbility.ets
ohos/entry/src/main/ets/pages/: Player.ets
ohos/entry/src/main/ets/plugins/: GeneratedPluginRegistrant.ets
ohos/entry/src/main/ets/utils/: VideoOperateUtil.ets
ohos/entry/src/main/resources/base/element/: color.json  string.json
ohos/entry/src/main/resources/en_US/element/: string.json
ohos/entry/src/main/resources/zh_CN/element/: string.json
test/: widget_test.dart
video_player/video_player/lib/: video_player.dart
video_player/video_player_android/pigeons/: messages.dart
video_player/video_player_ohos/lib/src/: messages.g.dart  ohos_video_player.dart
video_player/video_player_ohos/ohos/: oh-package.json5
video_player/video_player_ohos/ohos/src/main/ets/components/videoplayer/: AVIjkPlayer.ets.bak  Messages.ets  VideoPlayer.ets  VideoPlayerApi.ets  VideoPlayerApiCodec.ets  VideoPlayerApiImpl.ets  VideoPlayerPlugin.ets  VideoPlayercopy.ets
video_player/video_player_ohos/ohos/src/main/ets/components/videoplayer/constants/: CommonConstants.ets
video_player/video_player_ohos/pigeons/: messages.dart
video_player/video_player_platform_interface/lib/: video_player_platform_interface.dart
